--- a/Superhero Mangement System.csproj
+++ b/Superhero Mangement System.csproj
@@ -48,10 +48,10 @@
   <ItemGroup>
     <Compile Include="BusinessLogicLayer\UI.cs" />
     <Compile Include="DataLayer\Data.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="PresentationLayer\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="PresentationLayer\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="PresentationLayer\Logic.cs" />
