--- a/Superhero Mangement System.csproj
+++ b/Superhero Mangement System.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -182,6 +183,8 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Assets\logo.png" />
+    <Content Include="Assets\logo2.png" />
     <Content Include="DataLayer\summary.txt" />
     <Content Include="DataLayer\superheroes.txt" />
   </ItemGroup>
